# odc-commander

./: .gitignore  LICENSE  README.md  hatch_build.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  draft-release.yml
docs/: about.md  info.md
scripts/: compile-rcc.py  release-build.py  validate-version.py
scripts/lib/: utils.py
src/: ODC Commander.py  pysidedeploy.spec.jinja2
src/data/firmware/calibration-input-output/: calibration-input-output.ino
src/debug/: app.py
src/firmware/calibration-input-output/: calibration-input-output.ino
src/odc_commander/: __init__.py  __main__.py  app.py  parameters.py  resources.rcc  run.py
src/odc_commander/arduino/: __init__.py  __main__.py  cli.py  commands.py  errors.py  schemas.py  sketch.py  uploader.py  vendor_map.py
src/odc_commander/commands/: __init__.py  basic_params.py  transcoder.py
src/odc_commander/controllers/: __init__.py  calibration_input.py  calibration_output.py  runtime.py
src/odc_commander/interfaces/: controller.py  project_component.py
src/odc_commander/interfaces/project/: v1.py
src/odc_commander/project/: project_service.py
src/odc_commander/widgets/: about_window.py  main_window.py
src/odc_commander/widgets/controller_views/: calibration_input_view.py  calibration_output_view.py  runtime_view.py
src/odc_commander/widgets/param_list/: param_create.py  param_delegate.py  param_edit.py  param_model.py  param_view.py  param_widget.py
src/resources/odc/help/: 404.html  about.html  index.html  info.html
src/resources/odc/help/search/: search_index.json
src/resources/odc/licenses/: arduino-cli.md
