[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
[project]
name = "odc-commander"
description = "Control the Open Dynamic Clamp Hardware"
authors = [
    { name = "Leo Covarrubias", email = "leo@leocov.com" },
]
readme = "README.md"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7.2",
    "cobs>=1.2.1",
    "loguru",
    "pydantic",
    "pyside-app-core>=0.8.1",
#    "pyside-app-core@file:///{root}/../pyside-app-core"  # TODO: local dev
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/leocov-dev/odc-commander"
"Issues" = "https://github.com/leocov-dev/odc-commander/issues"
"Releases" = "https://github.com/leocov-dev/odc-commander/releases"

[tool.hatch.version]
path = "src/odc_commander/__init__.py"

 [tool.hatch.metadata]
 allow-direct-references = true

# -----------------------------------------------------------------------------
# default ---------------------------------------------------------------------
[tool.hatch.envs.default]
dev-mode = true
type = "virtual"
path = ".venv"
extra-dependencies = [
    "mkdocs"
]

[tool.hatch.envs.default.scripts]
odc-commander = [
    "hatch run compile-rcc",
    "python \"src/ODC Commander.py\"",
]
release-build = "hatch run scripts/release-build.py"
compile-rcc = [
    "hatch run mkdocs build -f \"{root}/mkdocs.yml\"",
    "hatch run pyside-app-core-compile-rcc \"{root}/src/odc_commander\" --extra-resource-root \"{root}/src/resources/odc\" --debug",
]
compile-firmware = "hatch run python -m odc_commander.arduino"

# -----------------------------------------------------------------------------
# format/linting --------------------------------------------------------------
[tool.hatch.envs.hatch-static-analysis]
dev-mode = true
skip-install = false
extra-dependencies = [
    "pyside6==6.7.*",
    "jinja2==3.*",
    "mypy>=1.10",
    "import-linter==2.*",
]

[tool.hatch.envs.hatch-static-analysis.env-vars]
PYTHONPATH = "{root}/src:{env:PYTHONPATH:}"

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    'ruff format{env:HATCH_FMT_ARGS:} --check --diff {args:.}',
]
format-fix = [
    'ruff format{env:HATCH_FMT_ARGS:} {args:.}'
]
lint-check = [
    'mypy',
    'ruff check{env:HATCH_FMT_ARGS:} {args:.}',
    'lint-imports',
]
lint-fix = [
    'mypy',
    'ruff check{env:HATCH_FMT_ARGS:} --fix {args:.}',
    'lint-imports',
]

# -----------------------------------------------------------------------------
# linting ---------------------------------------------------------------------
[tool.ruff.lint]
extend-ignore = [
    "EM101",
    "EM102",
    "TRY003",
    "I001",
    "N802",
    "FBT001",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
    "TID252",
]
"__main__.py" = [
    "T201",
]
"scripts/*" = [
    "S607",
]
"ODC Commander.py" = [
    "INP001",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
packages = ["odc_commander"]
strict = true
implicit_reexport = true

# -----------------------------------------------------------------------------
# import linter config and rules ----------------------------------------------
[tool.importlinter]
root_packages = [
    "odc_commander",
]
include_external_packages = true
